Adding-blue-border

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -413,8 +413,8 @@
   <div class="body">
     <img src="pics/stage-show.gif" class="background-screen" id="background-stage">
     <div class="body-wrapper">
-      <img src="pics/home-background-2.gif" class="background-screen">
-      <img src="pics/border-stretched-2.png" class="background-screen">
+      <!-- <img src="pics/home-background-2.gif" class="background-screen"> -->
+      <img src="pics/blue-border.gif" class="background-screen">
 
       <center>
         <div class="home-center-tab">
@@ -426,6 +426,7 @@
 
           <div class="home-nav-vid-bar" style="position: relative; width: 0; height: 0; margin-left: 85%;">
             <!-- <div class="home-nav-vid-wrapper" style="z-index: 2px; position: absolute; top: 3vh; left: -2.2vw; border: 1px solid yellow; width: 100px; height: 200px;"> -->
+              <!-- style="padding: 0px; background-image: url('pics/blue-border.gif'); background-size: cover; background-size: 100%; background-repeat: no-repeat;" -->
               <div class="home-nav-vid">
                 <img src="pics/vhs-camera.gif" style="z-index: 1px; position: absolute; right: 0; top: 0; width: 50%; ">
                 <img src="pics/Rotating_earth_(large).gif">
