--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -414,7 +414,7 @@
     <img src="pics/stage-show.gif" class="background-screen" id="background-stage">
     <div class="body-wrapper">
       <!-- <img src="pics/home-background-2.gif" class="background-screen"> -->
-      <img src="pics/blue-border.gif" class="background-screen">
+      <img src="Blue-Square-No-Background.png" class="background-screen">
 
       <center>
         <div class="home-center-tab">
