--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -181,6 +181,9 @@
 
     /* orientation: portrait */
     @media screen and (max-width: 600px) {
+      #background-stage {
+        display: none;
+      }
 
       .background-screen {
         position: absolute;
