--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -432,6 +432,8 @@
               <!-- style="padding: 0px; background-image: url('pics/blue-border.gif'); background-size: cover; background-size: 100%; background-repeat: no-repeat;" -->
               <div class="home-nav-vid">
                 <img src="pics/vhs-camera.gif" style="z-index: 1px; position: absolute; right: 0; top: 0; width: 50%; ">
+                <!-- <img src="pics/Blue-Square-No-Background.png"> -->
+                <!-- style="border: 10px solid transparent; padding: 10px; border-image-source: url(pics/Blue-Square-No-Background.png);" -->
                 <img src="pics/Rotating_earth_(large).gif">
                 <button id="home-vid-text"
                   style="z-index: 2px; border: 0; padding: 0; background: none; font-weight: normal; font-family: myFirstFont; color: white; position: absolute; top: 44px; right: 33px; font-size: 0.9em;">MEDIA</button>
