--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -144,6 +144,14 @@
       display: none;
     }
 
+    #vid {
+      border: 10px solid transparent;
+      padding: 0 30px 30px 0;
+      border-image-source: url(pics/blue-border.gif);
+      border-image-slice: 100;
+      border-image-width: 10px;
+    }
+
     @media screen and (max-width: 1300px) {
       .home-nav-vid {
         width: 250px;
@@ -425,7 +433,7 @@
             <div class="home-nav-vid">
               <!-- <img src="pics/Blue-Square-No-Background.png"> -->
               <!-- style="border: 10px solid transparent; padding: 10px; border-image-source: url(pics/Blue-Square-No-Background.png);" -->
-              <img src="pics/Rotating_earth_(large).gif">
+              <p id="vid"><img src="pics/Rotating_earth_(large).gif"></p>
               <img src="pics/vhs-camera.gif" style="z-index: 1px; position: absolute; right: 0; top: 0; width: 50%;">
               <button id="home-vid-text"
                 style="z-index: 2px; border: 0; padding: 0; background: none; font-weight: normal; font-family: myFirstFont; color: white; position: absolute; top: 44px; right: 33px; font-size: 0.9em;">MEDIA</button>
