Blue-border-responsiveness

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -146,10 +146,14 @@
 
     #vid {
       border: 10px solid transparent;
-      padding: 0 30px 30px 0;
       border-image-source: url(pics/blue-border.gif);
       border-image-slice: 100;
       border-image-width: 10px;
+    }
+
+    #vid img {
+      width: 100%;
+      height: 80%;
     }
 
     @media screen and (max-width: 1300px) {
@@ -417,7 +421,7 @@
     <img src="pics/stage-show.gif" class="background-screen" id="background-stage">
     <div class="body-wrapper">
       <!-- <img src="pics/home-background-2.gif" class="background-screen"> -->
-      <img src="pics/Blue-Square-No-Background.png" class="background-screen">
+      <img src="pics/blue-border.gif" class="background-screen">
 
       <center>
         <div class="home-center-tab">
