--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -425,14 +425,13 @@
 
 <body>
   <div class="body">
-    <img src="pics/stage-show.gif" class="background-screen" id="background-stage" style="z-index: -3;">
+    <img src="pics/stage-show.gif" class="background-screen" id="background-stage" style="z-index: -1;">
     <div class="body-wrapper">
       <div class="center-tab-background">
         <center>
           <div class="home-center-tab">
 
-            <div class="home-nav"
-              style="z-index: px; background-color: #d4cdcd; border: 3px solid #979797; text-align: left; color: black; position: relative; top: -4px; border-radius: 4px; padding: 7px 0 7px 5%;">
+            <div class="home-nav" style="background-color: #d4cdcd; border: 3px solid #979797; text-align: left; color: black; position: relative; top: -4px; border-radius: 4px; padding: 7px 0 7px 5%;">
               <img src="pics/awge-header-logo.png" height="35px">
             </div>
 
