--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -146,7 +146,7 @@
     #vid {
       border: 10px solid transparent;
       border-image-source: url(pics/blue-border.gif);
-      border-image-slice: 30;
+      border-image-slice: 50;
       border-image-width: 10px;
     }
 
@@ -159,7 +159,7 @@
       background-image: url('pics/blue-border.gif');
       background-size: 100% 100%;
       height: 80%;
-      box-shadow: 0 0 8px 8px white inset;
+      box-shadow: 0 -10px 28px 10px black inset;
     }
 
     #home-vid-text {
@@ -455,7 +455,7 @@
             <div class="home-nav-vid-bar" style="position: relative; width: 0; height: 0; margin-left: 85%;">
               <!-- <div class="home-nav-vid-wrapper" style="z-index: 2px; position: absolute; top: 3vh; left: -2.2vw; border: 1px solid yellow; width: 100px; height: 200px;"> -->
               <div class="home-nav-vid">
-                <p id="vid"><img src="pics/Rotating_earth_(large).gif"></p>
+                <div id="vid"><img src="pics/Rotating_earth_(large).gif"></div>
                 <img src="pics/vhs-camera.gif" style="z-index: 1px; position: absolute; right: 0; top: 0; width: 50%;">
                 <button id="home-vid-text">MEDIA</button>
               </div>
