--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -256,6 +256,19 @@
       }
     }
 
+    /* @media screen and (max-height: 1000px) {
+      .home-nav-vid {
+        top: 100px;
+      }
+    } */
+
+    @media screen and (min-height: 750px) , (min-width: 400px) {
+      .home-nav-vid {
+        top: 90px;
+        right: 15px;
+      }
+    }
+
     /* @media screen and (min-width: 480px) and (orientation: portrait),
     screen and (max-height: 480px) and (orientation: landscape) {
       .body-wrapper {
