--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -256,13 +256,7 @@
       }
     }
 
-    /* @media screen and (max-height: 1000px) {
-      .home-nav-vid {
-        top: 100px;
-      }
-    } */
-
-    @media screen and (min-height: 750px) , (min-width: 400px) {
+    @media screen and (min-height: 750px) and (min-width: 400px) {
       .home-nav-vid {
         top: 90px;
         right: 15px;
