Cropped border for a video portion

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -145,8 +145,8 @@
 
     #vid {
       border: 10px solid transparent;
-      border-image-source: url(pics/blue-border.gif);
-      border-image-slice: 50;
+      border-image-source: url(pics/blue-border-cropped.gif);
+      border-image-slice: 20;
       border-image-width: 10px;
     }
 
