--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -156,10 +156,10 @@
     }
 
     .center-tab-background {
-      background-image: url('pics/blue-border.gif');
+      background-image: url('pics/blue-border-cropped.gif');
       background-size: 100% 100%;
       height: 80%;
-      box-shadow: 0 -10px 28px 10px black inset;
+      box-shadow: 0 -2px 18px 10px black inset;
     }
 
     #home-vid-text {
