--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -476,8 +476,10 @@
             <div class="home-option-container" style="display: flex; height: calc(100% - 66px); position: relative;">
               <div class="home-options" style="width: 100%; display: flex; flex-direction: column;">
                 <div class="home-options-row" style="display: flex; flex: 1; position: relative;">
-                  <div id="top-row" class="home-options-item" style="flex: 1; justify-content: center; align-items: center;">
-                    <div id="vid" style="width: 70%;"><img src="pics/Rotating_earth_(large).gif" style="position: relative;"></div>
+                  <div id="top-row" class="home-options-item"
+                    style="flex: 1; justify-content: center; align-items: center;">
+                    <div id="vid" style="width: 70%;"><img src="pics/Rotating_earth_(large).gif"
+                        style="position: relative;"></div>
                     <img src="pics/vhs-camera.gif" style="position: absolute; right: 25; top: 0; width: 50%;">
                     <button style="color: white; font-size: 0.7em; position: absolute; top: 25;">MEDIA</button>
                   </div>
