--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -479,7 +479,7 @@
                   <div id="top-row" class="home-options-item"
                     style="flex: 1; justify-content: center; align-items: center;">
                     <div id="vid" style="width: 70%;"><img src="pics/Rotating_earth_(large).gif"
-                        style="position: relative;"></div>
+                        style="position: relative; height: 70%;"></div>
                     <img src="pics/vhs-camera.gif" style="position: absolute; right: 25; top: 0; width: 50%;">
                     <button style="color: white; font-size: 0.7em; position: absolute; top: 25;">MEDIA</button>
                   </div>
