--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -119,7 +119,7 @@
       z-index: 0px;
       width: 45vw;
       height: 47vh;
-      background-color: #e6e2e2;
+      /* background-color: #e6e2e2; */
       border: 2px solid black;
       border-radius: 7px;
       position: relative;
